Merapihkan Dokumentasi API
